# hydro-reseau

./: .gitignore  hello.py  pyproject.toml
.claude/: settings.local.json
docs/: hive_partitioning.md  static_attributes_merged.md
notebooks/: data_interface_example.ipynb
src/hydro_reseau/: __init__.py
src/hydro_reseau/data_utils/: data_interface.py
test/: test_data_interface.py  test_first.py
